# Speech-Emotion-Recognition

./: (SER).ipynb  README.md  SER.ipynb  pyproject.toml
