[project]
name = "testnew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"



dependencies = [
    "librosa",
    "soundfile",
    "pandas",
    "numpy",
    "tqdm",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "ipykernel>=7.0.1",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
]
